web/themes/custom/cloudy/scss/components/_form.scss
/**
 * @file
 * Visual styles for Tweme's form components.
 */

.form--inline {
  @extend .form-inline;
}

select.form-select {
  @extend .form-control;
  margin-top: .25rem;
  border-radius: .125rem;
}

.views-exposed-form form {
  margin-bottom: 2rem;
}

.views-exposed-form .form-actions {
  @extend .align-self-end;
}

form .description,
form .counter {
  display: block;
  margin-bottom: $spacer;
  font-size: $font-size-sm;
}

form label {
  @extend .h5;
}

.entity-content-form-footer {
  border: $border-width solid $gray-300;
  padding: ($spacer * 1.5);
  margin-bottom: ($spacer * 2) !important;
  background-color: $gray-100;
}

/* fix for superfluous label colons in entity embed alignment form, bad alignment and mismatched label bolding */
.form-item-attributes-data-align label:after, .form-item-attributes-data-align .label:after {
  content: none !important;
}
.form-item-attributes-data-align label {
  margin-right: 10px;
}
.form-item-attributes-data-caption label {
  font-weight: bold;
}

/* put a little padding in styled CKEditor body */
.cke_editable {
  margin: 10px;
}

// Form control
.form--inline .form-item {
  margin-right: .5em;
}
.form-control {
  border-radius: .125rem;
}

// Form check input

td .form-check-input {
  margin-left: 0rem;
}

.invalid-feedback {
  display: inherit;
}

